# brailliant

./: README.md  pyproject.toml
brailliant/: __init__.py  ba_experiment.py  base.py  canvas.py  cli.py  cli_utils.py  image.py  sparkbars.py  sparkline.py  sparklines.py
brailliant/experimental/: base.py  encoder.py
examples/: advanced_balls.py  android_sensors.py  async_chars.py  balls.py  font_text.py  light_balls.py  phys_balls.py  simple_balls.py
tests/: test_brailliant.py
