[tool.poetry]
name = "brailliant"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


#[tool.poetry.group.dev.dependencies]
#pytest = "^7.2.0"
#black = "^22.12.0"
#mypy = "^0.991"
#usort = "^1.0.5"
#scalene = "^1.5.16"
#
#
#[tool.poetry.group.experimental.dependencies]
#ptpython = "^3.0.22"
#ipython = "^8.7.0"
#rich = "^12.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
