[tool.poetry]
name = "brailliant"
version = "0.1.0"
description = ""
authors = ["Pedro Batista <pedrovhb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


#[tool.poetry.group.dev.dependencies]
#pytest = "^7.2.0"
#black = "^22.12.0"
#mypy = "^0.991"
#usort = "^1.0.5"
#scalene = "^1.5.16"
#
#
#[tool.poetry.group.experimental.dependencies]
#ptpython = "^3.0.22"
#ipython = "^8.7.0"
#rich = "^12.6.0"
bitstring = "^4.0.1"
exceptiongroup = "^1.1.0"


[tool.poetry.group.examples.dependencies]
pymunk = "^6.4.0"
astream = "0.7.3"


[tool.poetry.group.image.dependencies]
pillow = "^9.3.0"

[tool.poetry.scripts]
brailliant = "brailliant.cli:display_braille_image"
bimg = "brailliant.cli:display_braille_image"
bbin = "brailliant.cli:display_braille_repr"
bspar = "brailliant.cli:display_sparkline"


[tool.poetry.group.dev.dependencies]
scalene = "^1.5.16"
mypy = "^0.991"
black = {extras = ["d"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
